--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,13 @@
     <div class="input-container">
       <form class="search-form" id="search-form">
         <input
+          class="input"
           type="text"
           name="searchQuery"
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">Search</button>
+        <button class="btnInput" type="submit">Search</button>
       </form>
     </div>
 
