--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     </div>
 
     <div class="gallery"></div>
+    <div class="more">Loading...</div>
 
     <script src="index.js" type="module"></script>
   </body>
