--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,10 @@
         <button class="btnInput" type="submit">Search</button>
       </form>
     </div>
-
-    <div class="gallery"></div>
-    <div class="more">Loading...</div>
+    <section class="container">
+      <div class="gallery"></div>
+      <div class="more"></div>
+    </section>
 
     <script src="index.js" type="module"></script>
   </body>
